# POC_old

./: .gitignore  1_extract_data.sh  2_get_matrix.sh  README.md
mutant_selection/: CMakeLists.txt
mutant_selection/brute_force/: brute_force.c  brute_force.h
mutant_selection/cap/: cap.c  cap.h
mutant_selection/include/: brute_force.h  cap.h  kill_matrix.h  random_cap.h  smc.h  stb_ds.h
mutant_selection/kill_matrix/: kill_matrix.c
mutant_selection/random_cap/: random_cap.c  random_cap.h
mutant_selection/smc/: smc.c  smc.h
mutant_selection/src/: brute_force.c  cap.c  kill_matrix.c  random_cap.c  smc.c
